--- a/src/assets/etc.css
+++ b/src/assets/etc.css
@@ -217,20 +217,6 @@ a {
     clear: both;
 }
 
-.transition-dot-5 {
-    transition: all 0.5s;
-}
-/*** transition ***/
-
-.login-enter-active {
-    transform: translateY(5px);
-}
-.login-enter,
-.login-leave-to {
-    transform: translateY(-30px) scale(1.2);
-    opacity: 0;
-}
-
 .register-date {
     display: flex;
     flex-direction: row;
@@ -240,6 +226,65 @@ a {
     align-content: stretch;
 }
 
+.bounce-enter-active {
+    animation: bounce-in-top .5s;
+}
+.bounce-leave-to {
+    animation: slide-out-top .5s;
+
+}
+
+/*** animation ***/
+@keyframes bounce-in-top {
+    0% {
+        -webkit-transform: translateY(-60px) scale(1.3);
+        transform: translateY(-60px) scale(1.3);
+        -webkit-animation-timing-function: ease-in;
+        animation-timing-function: ease-in;
+        opacity: 0;
+    }
+    60% {
+        -webkit-transform: translateY(10px);
+        transform: translateY(10px);
+        -webkit-animation-timing-function: ease-out;
+        animation-timing-function: ease-out;
+    }
+    85% {
+        -webkit-transform: translateY(-3px);
+        transform: translateY(-3px);
+        -webkit-animation-timing-function: ease-out;
+        animation-timing-function: ease-out;
+    }
+    100% {
+        -webkit-transform: translateY(0);
+        transform: translateY(0);
+        -webkit-animation-timing-function: ease-in;
+        animation-timing-function: ease-in;
+        opacity: 1;
+    }
+}
+
+@keyframes slide-out-top {
+    0% {
+        -webkit-transform: translateY(0);
+        transform: translateY(0);
+        -webkit-animation-timing-function: ease-in;
+        animation-timing-function: ease-in;
+        opacity: 1;
+    }
+    60% {
+        opacity: 0.2;
+    }
+    100% {
+        -webkit-transform: translateY(-60px) scale(1.3);
+        transform: translateY(-60px) scale(1.3);
+        -webkit-animation-timing-function: ease-in;
+        animation-timing-function: ease-in;
+        opacity: 0;
+    }
+}
+
+/*** media query ***/
 @media (max-width: 485px) {
     .popup-login {
         top: 0;
@@ -282,102 +327,5 @@ a {
         padding: 30px;
         background: rgb(54, 57, 63);
         border-radius: 0.25rem;
-    }
-}
-
-
-.bounce-in-top {
-    -webkit-animation: bounce-in-top 1.1s both;
-    animation: bounce-in-top 1.1s both;
-}
-/**
- * ----------------------------------------
- * animation bounce-in-top
- * ----------------------------------------
- */
-@-webkit-keyframes bounce-in-top {
-    0% {
-        -webkit-transform: translateY(-500px);
-        transform: translateY(-500px);
-        -webkit-animation-timing-function: ease-in;
-        animation-timing-function: ease-in;
-        opacity: 0;
-    }
-    38% {
-        -webkit-transform: translateY(0);
-        transform: translateY(0);
-        -webkit-animation-timing-function: ease-out;
-        animation-timing-function: ease-out;
-        opacity: 1;
-    }
-    55% {
-        -webkit-transform: translateY(-65px);
-        transform: translateY(-65px);
-        -webkit-animation-timing-function: ease-in;
-        animation-timing-function: ease-in;
-    }
-    72% {
-        -webkit-transform: translateY(0);
-        transform: translateY(0);
-        -webkit-animation-timing-function: ease-out;
-        animation-timing-function: ease-out;
-    }
-    81% {
-        -webkit-transform: translateY(-28px);
-        transform: translateY(-28px);
-        -webkit-animation-timing-function: ease-in;
-        animation-timing-function: ease-in;
-    }
-    90% {
-        -webkit-transform: translateY(0);
-        transform: translateY(0);
-        -webkit-animation-timing-function: ease-out;
-        animation-timing-function: ease-out;
-    }
-    95% {
-        -webkit-transform: translateY(-8px);
-        transform: translateY(-8px);
-        -webkit-animation-timing-function: ease-in;
-        animation-timing-function: ease-in;
-    }
-    100% {
-        -webkit-transform: translateY(0);
-        transform: translateY(0);
-        -webkit-animation-timing-function: ease-out;
-        animation-timing-function: ease-out;
-    }
-}
-
-.slide-out-top {
-    -webkit-animation: slide-out-top 0.5s cubic-bezier(0.550, 0.085, 0.680, 0.530) both;
-    animation: slide-out-top 0.5s cubic-bezier(0.550, 0.085, 0.680, 0.530) both;
-}
-/**
- * ----------------------------------------
- * animation slide-out-top
- * ----------------------------------------
- */
-@-webkit-keyframes slide-out-top {
-    0% {
-        -webkit-transform: translateY(0);
-        transform: translateY(0);
-        opacity: 1;
-    }
-    100% {
-        -webkit-transform: translateY(-1000px);
-        transform: translateY(-1000px);
-        opacity: 0;
-    }
-}
-@keyframes slide-out-top {
-    0% {
-        -webkit-transform: translateY(0);
-        transform: translateY(0);
-        opacity: 1;
-    }
-    100% {
-        -webkit-transform: translateY(-1000px);
-        transform: translateY(-1000px);
-        opacity: 0;
     }
 }
