--- a/src/assets/etc.css
+++ b/src/assets/etc.css
@@ -270,11 +270,59 @@ a {
     display: none;
 }
 
+.guild-nav {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 72px !important;
+    height: 100% !important;
+    background-color: rgb(32, 34, 37);
+}
+.channel-nav {
+    position: absolute;
+    top: 0;
+    left: 72px;
+    width: 240px !important;
+    height: 100% !important;
+    background: rgb(47, 49, 54);
+}
+.chat-box {
+    position: absolute;
+    top: 0;
+    left: 312px;
+    width: calc(100% - 312px);
+    height: 100%;
+    background: rgb(55, 57, 62);
+}
+.chat-box-top {
+    position: absolute;
+    top: 0;
+    width: 100%;
+    height: 48px !important;
+    border-bottom: 1px solid rgb(44, 45, 49);
+}
+.chat-box-title {
+    padding: 10px;
+}
+.input-chat-box {
+    position: absolute;
+    bottom: 0;
+    padding: 10px;
+    width: 100%;
+}
+.input-chat {
+    width: 100%;
+    color: white;
+}
+
 .bounce-enter-active {
     animation: bounce-in-top 0.5s;
 }
 .bounce-leave-to {
     animation: slide-out-top 0.5s;
+}
+.loading-leave-to {
+    animation: fade-out 1s;
 }
 
 /*** animation ***/
@@ -399,5 +447,61 @@ a {
     }
     .home-banner-top {
         font-size: 35px;
+    }
+}
+
+
+
+
+/**
+ * ----------------------------------------
+ * animation rotate-center
+ * ----------------------------------------
+ */
+.rotate-center {
+    -webkit-animation: rotate-center 0.6s ease-in-out infinite both;
+    animation: rotate-center 0.6s ease-in-out infinite both;
+}
+
+@-webkit-keyframes rotate-center {
+    0% {
+        -webkit-transform: rotate(0);
+        transform: rotate(0);
+    }
+    100% {
+        -webkit-transform: rotate(360deg);
+        transform: rotate(360deg);
+    }
+}
+@keyframes rotate-center {
+    0% {
+        -webkit-transform: rotate(0);
+        transform: rotate(0);
+    }
+    100% {
+        -webkit-transform: rotate(360deg);
+        transform: rotate(360deg);
+    }
+}
+
+/**
+ * ----------------------------------------
+ * animation fade-out
+ * ----------------------------------------
+ */
+@-webkit-keyframes fade-out {
+    0% {
+        opacity: 1;
+    }
+    100% {
+        opacity: 0;
+    }
+}
+@keyframes fade-out {
+    0% {
+        opacity: 1;
+    }
+    100% {
+        opacity: 0;
     }
 }
