--- a/src/assets/css/etc.css
+++ b/src/assets/css/etc.css
@@ -14,17 +14,27 @@
 /*** basic ***/
 
 html,
-body {
-    height: 100% !important;
+body,
+#app {
+    height: 100%;
+    width: 100%;
+    min-height: 100vh !important;
+    font-size: 100%;
     overflow: auto;
     margin: 0;
     background: rgb(47, 49, 54);
     color: rgb(128, 132, 137);
     font-family: 'NanumBarunGothic', sans-serif;
 }
-#app {
-    height: 100%;
-}
+body {
+    padding: 0;
+    margin: 0;
+    display: block !important;
+    font-weight: 500 !important;
+    line-height: 1.25em;
+    -webkit-font-smoothing: subpixel-antialiased;
+    -webkit-overflow-scrolling: touch;
+    overflow-x: hidden; }
 /*** input ***/
 input {
     padding: 10px;
@@ -45,10 +55,20 @@ select {
     border-radius: 0.25rem;
     font-size: 16px;
 }
+
+/*** overflow ***/
+.overflow-h {
+    overflow: hidden;
+}
 /*** A ***/
 a {
 }
 
+.content-wrapper {
+    height: 100%;
+    min-height: 100%;
+    position: relative;
+}
 .popup-login {
     top: calc(50% - 194px);
     left: calc(50% - 240px);
@@ -270,32 +290,32 @@ a {
     display: none;
 }
 
+.channel-box {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: nowrap;
+    justify-content: flex-start;
+    align-items: stretch;
+    align-content: stretch;
+    width: 100%;
+    height: 100%;
+}
 .guild-nav {
-    position: absolute;
-    top: 0;
-    left: 0;
     width: 72px !important;
-    height: 100% !important;
     background-color: rgb(32, 34, 37);
 }
 .channel-nav {
-    position: absolute;
-    top: 0;
-    left: 72px;
     width: 240px !important;
     height: 100% !important;
     background: rgb(47, 49, 54);
 }
 .chat-box {
-    position: absolute;
-    top: 0;
-    left: 312px;
+    overflow: hidden;
     width: calc(100% - 312px);
     height: 100%;
     background: rgb(55, 57, 62);
 }
 .chat-box-top {
-    position: absolute;
     top: 0;
     width: 100%;
     height: 48px !important;
@@ -304,8 +324,14 @@ a {
 .chat-box-title {
     padding: 10px;
 }
+
+.chat-box-content {
+    padding-left: 20px;
+    height: calc(100% - 109px) !important;
+    overflow: scroll !important;
+}
+
 .input-chat-box {
-    position: absolute;
     bottom: 0;
     padding: 10px;
     width: 100%;
@@ -449,9 +475,6 @@ a {
         font-size: 35px;
     }
 }
-
-
-
 
 /**
  * ----------------------------------------
