--- a/src/assets/css/etc.css
+++ b/src/assets/css/etc.css
@@ -45,7 +45,23 @@ body {
     -khtml-user-select: none;
     user-select: none;
 }
+.img-no-drag {
+    -webkit-user-drag: none;
+}
 
+.bg-wrapper {
+    position: fixed;
+    width: 100%;
+    height: 100%;
+    z-index: 60;
+}
+.bg-img {
+    width: 100%;
+    object-fit: cover;
+    height: 100%;
+    min-height: 1080px;
+    -webkit-user-drag: none;
+}
 /*** input ***/
 input {
     padding: 10px;
