웹소켓 json으로 변경
이전 대화내역 저장 및 불러오기

--- a/src/assets/css/etc.css
+++ b/src/assets/css/etc.css
@@ -192,6 +192,9 @@ a {
 .text-gray {
     color: #8f9eb5 !important;
 }
+.text-dark-gray {
+    color: rgb(122, 122, 122);
+}
 
 .text-blue {
     color: #42a5f5 !important;
