--- a/src/assets/css/etc.css
+++ b/src/assets/css/etc.css
@@ -58,6 +58,10 @@ body {
     min-height: 1080px;
     -webkit-user-drag: none;
 }
+
+.position-absolute {
+    position: absolute !important;
+}
 /*** input ***/
 input {
     padding: 10px;
@@ -708,4 +712,23 @@ a {
     100% {
         opacity: 0;
     }
+}
+
+
+#loading {
+    display: inline-block;
+    width: 50px;
+    height: 50px;
+    border: 3px solid rgba(255,255,255,.3);
+    border-radius: 50%;
+    border-top-color: #fff;
+    animation: spin 1s ease-in-out infinite;
+    -webkit-animation: spin 1s ease-in-out infinite;
+}
+
+@keyframes spin {
+    to { -webkit-transform: rotate(360deg); }
+}
+@-webkit-keyframes spin {
+    to { -webkit-transform: rotate(360deg); }
 }
