--- a/src/assets/css/etc.css
+++ b/src/assets/css/etc.css
@@ -34,6 +34,11 @@ body {
     overflow-x: hidden;
 }
 
+a:link { color: red; text-decoration: none;}
+a:visited { color: black; text-decoration: none;}
+a:hover { color: blue; text-decoration: none;}
+
+
 .no-drag {
     -ms-user-select: none;
     -moz-user-select: -moz-none;
